--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.17.3",
     "axios": "^0.24.0",
     "jquery": "^3.6.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
