--- a/reactApp/.env
+++ b/reactApp/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_BASEURL=https://dichoapi.azurewebsites.net/api/v1
+REACT_APP_GEOLOCATION_API_KEY=AIzaSyDpCHIvLJ7SFW8wXTjShluXxRWfEkmGECA
