--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
