--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.2",
+    "react-loading-skeleton": "^3.0.3",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
