--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -8,9 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.17.3",
+    "antd-img-crop": "^4.2.0",
     "axios": "^0.24.0",
+    "crypto-js": "^4.1.1",
+    "data-form": "^3.0.0",
     "firebase": "^9.6.10",
     "jquery": "^3.6.0",
+    "moment": "^2.29.2",
+    "node-rsa": "^1.1.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,7 +24,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "validator": "^13.7.0"
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0",
+    "vnpay": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
