--- a/reactApp/.env
+++ b/reactApp/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASEURL=https://dichoapi.azurewebsites.net/api/v1
+REACT_APP_API_BASEURL=https://api-dichonao.reso.vn/api/v1
 REACT_APP_GOOGLE_MAP_API_KEY=AIzaSyDpCHIvLJ7SFW8wXTjShluXxRWfEkmGECA
