--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -18,6 +18,7 @@
     "node-rsa": "^1.1.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.3",
     "react-places-autocomplete": "^7.3.0",
