--- a/reactApp/.env
+++ b/reactApp/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_BASEURL=https://api-dichonao.reso.vn/api/v1
 REACT_APP_GOOGLE_MAP_API_KEY=AIzaSyDpCHIvLJ7SFW8wXTjShluXxRWfEkmGECA
+REACT_APP_FIREBASE_API_KEY=AIzaSyC9aBJX28Xqj_kfJKtsVtfbgyakbKCLpvU
